--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <input type="text" name="nameEdit" id="" />
         <input type="file" name="imgEdit" />
         <button type="submit" class="deitSubmit">+</button>
+        <img src="" class="editimg" alt="" />
       </form>
       <button class="editClose">X</button>
     </dialog>
